--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,6 +1,6 @@
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #428cff;
+  --ion-color-primary: #2f2f2f;
   --ion-color-primary-rgb: 66,140,255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255,255,255;
